# RAG-chatAI

./: .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  README.md  eslint.config.ts  package.json  pnpm-lock.yaml
server/: .env.example  pyproject.toml
server/app/: config.py  main.py
server/app/api/: chat.py  conversations.py  deps.py  knowledge.py  memory.py
server/app/core/: database.py  sse.py
server/app/models/: conversation.py  knowledge.py  memory.py
server/app/rag/: embedder.py  lexical.py  loader.py  prompt.py  reranker.py  retriever.py  splitter.py  tokenizer.py
server/app/schemas/: chat.py
server/app/services/: agent_service.py  context_service.py  conversation_context_service.py  llm_provider.py  llm_service.py  memory_service.py  rag_service.py  tool_registry.py
server/app/tools/: base.py  search_knowledge.py
server/data/: chat.db  short.txt
server/data/chroma/: chroma.sqlite3
server/data/chroma_test/: chroma.sqlite3
server/data/uploads/: 435ed74f-c7bd-40ea-a467-872e3bd26719.txt  6457e732-d56d-495f-9e93-0319b7555b99.txt
server/evaluation/: __init__.py  agent_runner.py  api.py  config.py  report.py  retrieval_runner.py  runner.py
server/evaluation/dataset/: agent_cases.py  auto_test_cases.json  generator.py  retrieval_cases.py  test_cases.py
server/evaluation/metrics/: __init__.py
server/evaluation/reports/: eval_20260701_080711.json  eval_20260701_081049.json  eval_20260701_082042.json  eval_20260701_082356.json  eval_20260701_084634.json  eval_20260701_084634.md  eval_20260701_091515.json  eval_20260701_091515.md
(+34 files in other folders)
