[project]
name = "chat-ai-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.12",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
